[package]
name = "orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = { git = "https://github.com/R2NorthstarTools/rrplug.git" }
log = "*"
once_cell = "*"
parking_lot = "0.12.1"
rand = "0.8.5"

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]